Fix grunt dist and make requesting and listing of the set filter in the runner > available section dynamic

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -52,5 +52,10 @@
         "STEPS" : {
             "TITLE" : "Test steps"
         }
+    },
+    "FILTERS" : {
+        "SETS" : {
+            "DEFAULT_NAME_TITLE" : "All sets"
+        }
     }
 }
