Add listing of scenarios and styling to the available section and a working tag filter

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -61,7 +61,7 @@
             "DEFAULT_VALUE" : "All sets"
         },
         "TAGS" : {
-            "DEFAULT_VALUE" : "Any tag"
+            "DEFAULT_VALUE" : "any tag"
         }
     }
 }
