And environment filter and run all option to top filter area for the available section
This change also adjusts the main style of the selection dropdown buttons to allow them to blend in with the general text

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -28,7 +28,9 @@
             "TITLE" : "Available scenarios",
             "FILTER" : {
                 "BEFORE_SET": "Stories in",
-                "BEFORE_TAG": "tagged with"
+                "BEFORE_TAG": "tagged with",
+                "RUN_ALL": "Run all",
+                "BEFORE_ENVIRONMENT": "on"
             }
         },
         "RUNNING" : {
@@ -58,10 +60,13 @@
     },
     "FILTERS" : {
         "SETS" : {
-            "DEFAULT_VALUE" : "All sets"
+            "DEFAULT_VALUE" : "all sets"
         },
         "TAGS" : {
             "DEFAULT_VALUE" : "any tag"
+        },
+        "ENVIRONMENTS" : {
+            "DEFAULT_VALUE" : "environment"
         }
     }
 }
