Add responsive icons for filter collapse to use for filters with many options

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -30,6 +30,7 @@
                 "BEFORE_SET": "Stories in",
                 "BEFORE_TAG": "tagged with",
                 "RUN_ALL": "Run all",
+                "RUN": "Run",
                 "BEFORE_ENVIRONMENT": "on"
             }
         },
