--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -28,14 +28,15 @@
     },
     "RUNNER" : {
         "TITLE" : "Run",
+        "SELECT_ENVIRONMENT" : "Select an environment",
         "AVAILABLE" : {
             "TITLE" : "Available scenarios",
             "FILTER" : {
-                "BEFORE_SET": "Stories in",
+                "BEFORE_ENVIRONMENT": "Stories on",
+                "BEFORE_SET": "in",
                 "BEFORE_TAG": "tagged with",
                 "RUN_ALL": "Run all",
-                "RUN": "Run",
-                "BEFORE_ENVIRONMENT": "on"
+                "RUN": "Run"
             }
         },
         "RUNNING" : {
