--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -32,10 +32,10 @@
         "AVAILABLE" : {
             "TITLE" : "Available scenarios",
             "FILTER" : {
-                "BEFORE_ENVIRONMENT": "Stories on",
-                "BEFORE_SET": "in",
+                "BEFORE_SET": "Stories in",
                 "BEFORE_TAG": "tagged with",
                 "RUN_ALL": "Run all",
+                "BEFORE_ENVIRONMENT": "on",
                 "RUN": "Run"
             }
         },
