Add support for user feedback and add tests for feedback and running scenarios

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -8,6 +8,11 @@
             "PREV" : "Previous page"
         }
     },
+    "FEEDBACK": {
+        "ERROR": {
+            "NO_ENVIRONMENT_SELECTED": "Please select an environment to run your test on"
+        }
+    },
     "LOADER": {
         "LOADED" : "All done!"
     },
