--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -20,7 +20,7 @@
         },
         "SUCCESS": {
             "RUN": {
-                "MULTIPLE_REQUEST": "Started execution of {{count}} scenarios on {{environment}}",
+                "MULTIPLE_REQUEST": "Started execution of {{count}} stories on {{environment}}",
                 "SINGLE_REQUEST": "Started execution of your scenario on {{environment}}"
             }
         },
