--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -96,7 +96,8 @@
                 },
                 "STARTED_BY": "by **{{name}}**",
                 "RUNNING_ON": "on **{{environment}}**",
-                "MULTIPLE_STORIES_APPEND": " (and **{{storyCount}}** other stories)"
+                "MULTIPLE_STORIES_APPEND": " (and {{storyCount}} other stories)",
+                "SINGLE_STORY_APPEND": " (1 story)"
             }
         },
         "DEBUGGING" : {
