--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -15,7 +15,8 @@
                 "REQUEST_FAILED": "Your request could not be completed due to an error"
             },
             "SOCKET": {
-                "UNABLE_TO_RECONNECT": "Unable to reconnect to the server"
+                "UNABLE_TO_RECONNECT": "Unable to reconnect to the server",
+                "UNABLE_TO_CONNECT": "Unable to connect to the server run updates"
             }
         },
         "SUCCESS": {
