Add a different placeholder translation for the environment filter on the running section

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -125,13 +125,14 @@
     },
     "FILTERS" : {
         "SETS" : {
-            "DEFAULT_VALUE" : "all sets"
+            "ANY" : "all sets"
         },
         "TAGS" : {
-            "DEFAULT_VALUE" : "any tag"
+            "ANY" : "any tag"
         },
         "ENVIRONMENTS" : {
-            "DEFAULT_VALUE" : "environment"
+            "NONE" : "environment",
+            "ANY" : "all environments"
         }
     }
 }
