Add controllers and filters for the report section and move runner specific filters to the runner module

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -103,7 +103,7 @@
         "DEBUGGING" : {
             "TITLE" : "Debugging"
         },
-        "HISTORY" : {
+        "REPORT" : {
             "TITLE" : "Reports",
             "FILTER" : {
                 "BEFORE_STATUS" : "Show"
@@ -139,6 +139,15 @@
         "ENVIRONMENTS" : {
             "NONE" : "environment",
             "ANY" : "all environments"
+        },
+        "STATUSES" : {
+            "ANY" : "all results"
+        }
+    },
+    "STATE" : {
+        "RUN" : {
+            "SUCCESS" : "Successful",
+            "FAILED" : "Failed"
         }
     }
 }
