Prepare for the implementation of a report details page by renaming and rerouting

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -103,7 +103,7 @@
         "DEBUGGING" : {
             "TITLE" : "Debugging"
         },
-        "REPORT" : {
+        "REPORTS" : {
             "TITLE" : "Reports",
             "FILTER" : {
                 "BEFORE_STATUS" : "Show"
