Add listing of steps and status of steps to the report view and add a run utils service and base test

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -122,6 +122,9 @@
                     "SINGULAR" : "The story failed to execute",
                     "PLURAL" : "{{successStories}} out of {{totalStories}} stories were executed successfully"
                 }
+            },
+            "REPORT" : {
+                "RUN_NOT_COMPLETED" : "The run has not yet finished execution"
             }
         }
     },
