Add the ability to purge any completed runs from the running stories listing, thus cleaning the run list on screen manually

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -76,7 +76,9 @@
         "RUNNING" : {
             "TITLE" : "Running",
             "FILTER" : {
-                "BEFORE_ENVIRONMENT" : "Stories started on"
+                "BEFORE_ENVIRONMENT" : "Stories started on",
+                "PURGE" : "Purge",
+                "PURGE_EXPLAIN" : "Clear completed runs"
             },
             "NO_RUNS" : "There are no stories running that match your filter",
             "RUN" : {
