Prepare for the styling and behavior of the contextual sidebar by moving expand-collapse inside the directive

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -150,9 +150,12 @@
             "TITLE" : "Stories",
             "BEFORE_NEW_TITLE" : "Create a new story named",
             "LIST" : {
-                "PROLOGUE": "Prologue",
+                "PROLOGUE" : "Prologue",
                 "SCENARIOS" : "Scenarios",
                 "EPILOGUE": "Epilogue"
+            },
+            "SCENARIOS" : {
+                "DELETE" : "Delete"
             }
         },
         "STEPS" : {
