Translate the incomplete and delete icons for steps and give them proper styling

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -155,7 +155,8 @@
                 "EPILOGUE": "Epilogue"
             },
             "SCENARIOS": {
-                "DELETE": "Delete"
+                "DELETE": "Delete",
+                "INCOMPLETE": "Missing variables"
             },
             "MODAL" : {
                 "INPUT_TITLE": "Input mapping for",
