--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -148,7 +148,16 @@
         "TITLE" : "Write",
         "STORIES" : {
             "TITLE": "Stories",
+            "BEFORE_STORIES_FILTER": "Manage",
             "BEFORE_NEW_TITLE": "Create a new story named",
+            "NEW_STORY": "New story",
+            "NEW_SCENARIO": "New scenario",
+            "EDIT": "Edit",
+            "FILTER": {
+                "ALL_STORIES": "All stories",
+                "PENDING_STORIES": "Stories with pending steps",
+                "NO_PENDING_STORIES": "Stories without pending steps"
+            },
             "LIST": {
                 "PROLOGUE": "Prologue",
                 "SCENARIOS": "Scenarios",
