Change buttons to anchors, fix back/cancel icon in he story edit screen, display more appropriate title when editing a story.

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -149,6 +149,7 @@
         "STORIES" : {
             "TITLE": "Stories",
             "BEFORE_STORIES_FILTER": "Manage",
+            "BEFORE_TITLE": "Modify a story named",
             "BEFORE_NEW_TITLE": "Create a new story named",
             "NEW_STORY": "New story",
             "NEW_SCENARIO": "New scenario",
